k8s/extractor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor-deployment
  namespace: default
  labels:
    app: extractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor
  template:
    metadata:
      labels:
        app: extractor
    spec:
      containers:
      - name: extractor
        image: gcr.io/ornate-bond-345313/extractor:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: extractor-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
  selector:
    app: extractor
