k8s/image-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-deployment
  namespace: default
  labels:
    app: image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
      - name: image
        image: europe-west3-docker.pkg.dev/ornate-bond-345313/manganaya/image:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: image
