k8s/scraper-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-deployment
  namespace: default
  labels:
    app: scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: scraper
        image: europe-west3-docker.pkg.dev/ornate-bond-345313/manganaya/scraper:latest
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: scraper
