k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.regional-static-ip-name: "manganaya-ip"
    networking.gke.io/managed-certificates: "manganaya-cert"
spec:
  rules:
  - host: manganaya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
  - host: www.manganaya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
  - host: api.manganaya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
  - host: img.manganaya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-service
            port:
              number: 80
